2009-11-11 Sarka Todorova <sarka.todorova@cern.ch>
	* new TGC station taken into account in identification
	* tagged as MuonTrackingGeometry-00-05-29

2009-10-08 Sarka Todorova <sarka.todorova@cern.ch>
	* pass constituents info only if needed ( for blending )
        * fix span 
	* tagged as MuonTrackingGeometry-00-05-28

2009-10-05 Sarka Todorova <sarka.todorova@cern.ch>
	* simplify constituent info for DetachedTV
	* distinguish cutouts and overlaps
	* don't simplify poorly scanned shapes
        * fix span in blend material
	* tagged as MuonTrackingGeometry-00-05-27

2009-10-02 Sarka Todorova <sarka.todorova@cern.ch>
	* adjust envelope size
	* tagged as MuonTrackingGeometry-00-05-26

2009-09-30 Sarka Todorova <sarka.todorova@cern.ch>
	* shield material fixed (span regions)
	* tagged as MuonTrackingGeometry-00-05-25

2009-08-31 Sarka Todorova <sarka.todorova@cern.ch>
	* correct typo in 64-bit id
	* tagged as MuonTrackingGeometry-00-05-24

2009-08-30  RD Schaffer  <R.D.Schaffer@cern.ch>

	* tagged as MuonTrackingGeometry-00-05-23
	* src/MuonStationBuilder.cxx: added fixes for moving to 64-bit ids

2009-07-27 Sarka Todorova <sarka.todorova@cern.ch>
	* fix unidentified RPC layers
	* averaged spacer beams had an active label - fixed !
	* tagged as MuonTrackingGeometry-00-05-22

2009-07-20 Sarka Todorova <sarka.todorova@cern.ch>
	* fpe fix 
	* tagged as MuonTrackingGeometry-00-05-19/20/21

2009-07-13 Sarka Todorova <sarka.todorova@cern.ch>
	* mdt id fixed (ROE shift wrt station) 
	* tagged as MuonTrackingGeometry-00-05-18

2009-06-22 Sarka Todorova <sarka.todorova@cern.ch>
	* downscale messages 
	* tagged as MuonTrackingGeometry-00-05-17

2009-06-15 Sarka Todorova <sarka.todorova@cern.ch>
	* averaged spacer option 
	* tagged as MuonTrackingGeometry-00-05-15/16

2009-06-12 Sarka Todorova <sarka.todorova@cern.ch>
	* memory leak in spacer
	* tagged as MuonTrackingGeometry-00-05-14

2009-06-09 Sarka Todorova <sarka.todorova@cern.ch>
	* reorganize active material options